2007-10-03  Paf <paf@tuxfamily.org>
	* src/core/tests/testpo.cpp: Updated regarding operators changes in class
	Scalar<T>
	*  src/core/include/string.h: Add some operators and put class definition in string.cpp
	* src/core/include/scalar.h: Add conversion, arithmetic, insertion and
	extraction operators. getValue() method is now const. Add attribute type getter and setter
	* src/core/src/string.cpp: File added
	* src/core/Makefile: Add src/core/src/string.cpp to testpo target
	* Makefile.am: Add src/core/src/string.cpp to list of source files

2007-10-01  Gabriel <countag@wanadoo.fr>
	* src/core/include/camera.h: Initial release
	* src/core/include/camerafreefly.h: Initial release
	* src/core/include/camerafixe.h: Initial release
	* src/core/src/cgraphicmodule.cpp: Change ogre camera to our camera
	* update namespace Viracocha to Gnoll

2007-09-30  Paf <paf@tuxfamily.org>
	* src/main.cpp: Add namespace to Gnoll::Time
	* src/time/tests/testtimer.cpp: Fix namespace to Gnoll::Time
	* src/time/include/itimer.h: Fix namespace to Gnoll::Time
	* src/time/include/ctimermessages.h: Fix namespace to Gnoll::Time
	* src/time/include/cdestroydelayedeventlistener.h: Fix namespace to Gnoll::Time
	* src/time/include/ccreateperiodiceventlistener.h: Fix namespace to Gnoll::Time
	* src/time/include/cogretimer.h: Fix namespace to Gnoll::Time
	* src/time/include/cdestroyperiodiceventlistener.h: Fix namespace to Gnoll::Time
	* src/time/include/clinuxtimer.h: Fix namespace to Gnoll::Time
	* src/time/include/ccreatedelayedeventlistener.h: Fix namespace to Gnoll::Time
	* src/time/include/ctimemodule.h: Fix namespace to Gnoll::Time
	* src/time/src/cogretimer.cpp: Fix namespace to Gnoll::Time
	* src/time/src/cdestroyperiodiceventlistener.cpp: Fix namespace to Gnoll::Time
	* src/time/src/clinuxtimer.cpp: Fix namespace to Gnoll::Time
	* src/time/src/ccreatedelayedeventlistener.cpp: Fix namespace to Gnoll::Time
	* src/time/src/ctimemodule.cpp: Fix namespace to Gnoll::Time