@@ -18,11 +18,14 @@
  ***************************************************************************/
 
 
-/*---------------------------------integer---------------------------------*\
+/*-------------------------------cmessage----------------------------------*\
 |   This is a free fly camera                                               |
 |                                                                           |
 |   Changelog :                                                             |
-|               08/30/2007 - Gabriel - Initial release                      |
+|               08/31/2007 - Gabriel - Initial release                      |
+|               10/06/2007 - Gabriel - Add hack to enable key repeat        |
+|                                    - Add management of mouse for the      |
+|									   rotation                             |
 |                                                                           |
 \*-------------------------------------------------------------------------*/
 
@@ -48,6 +51,7 @@ namespace Gnoll
 		class StrafeCameraFreeFlyListener;
 		class MoveCameraFreeFlyListener;
 		class RotateCameraFreeFlyListener;
+		class MouseRotateCameraFreeFlyListener;
 
 		/**
 		*	This is the interface of all Sources.</br>
@@ -58,7 +62,11 @@ namespace Gnoll
 		private:
 			shared_ptr<CMessageListener> m_listenerMove;
 			shared_ptr<CMessageListener> m_listenerRotate;
+			shared_ptr<CMessageListener> m_listenerMouseRotate;
 			shared_ptr<CMessageListener> m_listenerStrafe;
+
+			shared_ptr<CMessageListener> m_listenerKeyUp;
+			shared_ptr<CMessageListener> m_listenerKeyDown;
 
 		public:
 
@@ -73,9 +81,12 @@ namespace Gnoll
 			 */
 			virtual ~CameraFreeFly()
 			{
-				CGenericMessageManager::getInstancePtr()->delListener ( m_listenerMove, CMessageType("KEYBOARD_KEYDOWN") );
-				CGenericMessageManager::getInstancePtr()->delListener ( m_listenerRotate, CMessageType("KEYBOARD_KEYDOWN") );
-				CGenericMessageManager::getInstancePtr()->delListener ( m_listenerStrafe, CMessageType("KEYBOARD_KEYDOWN") );
+				CGenericMessageManager::getInstancePtr()->delListener ( m_listenerMove, CMessageType("GRAPHIC_FRAME_RENDERED") );
+				CGenericMessageManager::getInstancePtr()->delListener ( m_listenerRotate, CMessageType("GRAPHIC_FRAME_RENDERED") );
+				CGenericMessageManager::getInstancePtr()->delListener ( m_listenerStrafe, CMessageType("GRAPHIC_FRAME_RENDERED") );
+				CGenericMessageManager::getInstancePtr()->delListener ( m_listenerKeyUp, CMessageType("KEYBOARD_KEYUP") );
+				CGenericMessageManager::getInstancePtr()->delListener ( m_listenerKeyDown, CMessageType("KEYBOARD_KEYDOWN") );
+				CGenericMessageManager::getInstancePtr()->delListener ( m_listenerMouseRotate, CMessageType("MOUSE_MOVED") );
 			}
 
 			/**
@@ -122,6 +133,137 @@ namespace Gnoll
 				
 		};
 
+
+		// Will be change by a std::map later ... maybe ...
+		static bool cffKeyMoveUp   = false;
+		static bool cffKeyMoveDown = false;
+
+		static bool cffKeyStrafeUp    = false;
+		static bool cffKeyStrafeDown  = false;
+		static bool cffKeyStrafeLeft  = false;
+		static bool cffKeyStrafeRight = false;
+
+		static bool cffKeyRotateUp    = false;
+		static bool cffKeyRotateDown  = false;
+		static bool cffKeyRotateLeft  = false;
+		static bool cffKeyRotateRight = false;
+
+		class KeyUp : public CMessageListener
+		{
+			public:
+				
+				/**
+				 * This is a constructor
+				 */
+				KeyUp() 
+				{
+				}
+
+				/**
+				 * This is a destructor
+				 */
+				virtual ~KeyUp() 
+				{
+				}
+
+				/**
+				 * This method is called in order to process a message
+				 * @param message The message this method will have to process
+				 */
+				virtual void handle ( shared_ptr<CMessage> message ) 
+				{ 
+					OIS::KeyCode key = message->getData<OIS::KeyCode>();
+
+					if(key == OIS::KC_UP)
+						cffKeyMoveUp = false;
+
+					if(key == OIS::KC_DOWN)
+						cffKeyMoveDown = false;
+
+					if(key == OIS::KC_E)
+						cffKeyRotateUp = false;
+
+					if(key == OIS::KC_D)
+						cffKeyRotateDown = false;
+
+					if(key == OIS::KC_S)
+						cffKeyRotateLeft = false;
+
+					if(key == OIS::KC_F)
+						cffKeyRotateRight = false;
+
+					if(key == OIS::KC_C)
+						cffKeyStrafeRight = false;
+
+					if(key == OIS::KC_V)
+						cffKeyStrafeLeft = false;
+
+					if(key == OIS::KC_B)
+						cffKeyStrafeUp = false;
+
+					if(key == OIS::KC_N)
+						cffKeyStrafeDown = false;
+				}
+		};
+
+		class KeyDown : public CMessageListener
+		{
+			public:
+				
+				/**
+				 * This is a constructor
+				 */
+				KeyDown() 
+				{
+				}
+
+				/**
+				 * This is a destructor
+				 */
+				virtual ~KeyDown() 
+				{
+				}
+
+				/**
+				 * This method is called in order to process a message
+				 * @param message The message this method will have to process
+				 */
+				virtual void handle ( shared_ptr<CMessage> message ) 
+				{ 
+					OIS::KeyCode key = message->getData<OIS::KeyCode>();
+
+					if(key == OIS::KC_UP)
+						cffKeyMoveUp = true;
+
+					if(key == OIS::KC_DOWN)
+						cffKeyMoveDown = true;
+
+					if(key == OIS::KC_E)
+						cffKeyRotateUp = true;
+
+					if(key == OIS::KC_D)
+						cffKeyRotateDown = true;
+
+					if(key == OIS::KC_S)
+						cffKeyRotateLeft = true;
+
+					if(key == OIS::KC_F)
+						cffKeyRotateRight = true;
+
+					if(key == OIS::KC_C)
+						cffKeyStrafeRight = true;
+
+					if(key == OIS::KC_V)
+						cffKeyStrafeLeft = true;
+
+					if(key == OIS::KC_B)
+						cffKeyStrafeUp = true;
+
+					if(key == OIS::KC_N)
+						cffKeyStrafeDown = true;
+				}
+		};
+
 		class MoveCameraFreeFlyListener : public CMessageListener
 		{
 			private:
@@ -151,12 +293,12 @@ namespace Gnoll
 				 */
 				virtual void handle ( shared_ptr<CMessage> message ) 
 				{ 
-					OIS::KeyCode key = message->getData<OIS::KeyCode>();
+					unsigned long lasttime = message->getData<unsigned long>();
 
-					if(key == OIS::KC_UP)
+					if(cffKeyMoveUp)
 						m_pInstanceCam->move(Ogre::Vector3(0.0f, 0.0f, -1.0f));
 
-					if(key == OIS::KC_DOWN)
+					if(cffKeyMoveDown)
 						m_pInstanceCam->move(Ogre::Vector3(0.0f, 0.0f, 1.0f));
 				}
 		};
@@ -190,19 +332,53 @@ namespace Gnoll
 				 */
 				virtual void handle ( shared_ptr<CMessage> message ) 
 				{ 
-					OIS::KeyCode key = message->getData<OIS::KeyCode>();
-
-					if(key == OIS::KC_E)
+					if(cffKeyRotateUp)
 						m_pInstanceCam->rotateAxisX(0.02);
 
-					if(key == OIS::KC_D)
+					if(cffKeyRotateDown)
 						m_pInstanceCam->rotateAxisX(-0.02);
 
-					if(key == OIS::KC_S)
+					if(cffKeyRotateLeft)
 						m_pInstanceCam->rotateAxisY(0.02);
 
-					if(key == OIS::KC_F)
+					if(cffKeyRotateRight)
 						m_pInstanceCam->rotateAxisY(-0.02);
+				}
+		};
+
+		class MouseRotateCameraFreeFlyListener : public CMessageListener
+		{
+			private:
+				Gnoll::Core::CameraFreeFly* m_pInstanceCam;
+
+			public:
+				
+				/**
+				 * This is a constructor
+				 */
+				MouseRotateCameraFreeFlyListener(Gnoll::Core::CameraFreeFly* pInstanceCam) 
+				{
+					m_pInstanceCam = pInstanceCam;
+				}
+
+				/**
+				 * This is a destructor
+				 */
+				virtual ~MouseRotateCameraFreeFlyListener() 
+				{
+					delete m_pInstanceCam;
+				}
+
+				/**
+				 * This method is called in order to process a message
+				 * @param message The message this method will have to process
+				 */
+				virtual void handle ( shared_ptr<CMessage> message ) 
+				{ 
+					MouseEvent event = message->getData<MouseEvent>();
+
+					m_pInstanceCam->rotateAxisY(-(event.relX / 20.0f) * 3.14 / 180);
+					m_pInstanceCam->rotateAxisX(-(event.relY / 20.0f) * 3.14 / 180);
 				}
 		};
 
@@ -235,18 +411,16 @@ namespace Gnoll
 				 */
 				virtual void handle ( shared_ptr<CMessage> message ) 
 				{ 
-					OIS::KeyCode key = message->getData<OIS::KeyCode>();
-
-					if(key == OIS::KC_C)
+					if(cffKeyStrafeLeft)
 						m_pInstanceCam->strafe(1.0f);
 
-					if(key == OIS::KC_V)
+					if(cffKeyStrafeRight)
 						m_pInstanceCam->strafe(-1.0f);
 
-					if(key == OIS::KC_B)
+					if(cffKeyStrafeUp)
 						m_pInstanceCam->strafeUp(1.0f);
 
-					if(key == OIS::KC_N)
+					if(cffKeyStrafeDown)
 						m_pInstanceCam->strafeUp(-1.0f);
 				}
 		};
